k8s/oke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: url-shortener
  labels:
    app: url-shortener
