k8s/oke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
  namespace: url-shortener
  labels:
    app: url-shortener
spec:
  selector:
    app: url-shortener
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
