k8s/oke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: url-shortener
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  # Set to your ingress class if you install one (e.g., nginx, oci)
  ingressClassName: nginx
  tls:
    - hosts:
        - 141-148-185-116.nip.io
      secretName: url-shortener-tls
  rules:
    - host: 141-148-185-116.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-shortener-service
                port:
                  number: 80
